@@ -457,6 +457,8 @@ item.zincdust.name=Zinc Dust
 item.rhodiumingot.name=Rhodium Ingot
 item.rhodiumdust.name=Rhodium Dust
 
+item.radiumingot.name=Radium Ingot
+
 item.rokkite.name=Rokkite
 item.amber.name=Amber
 item.topaz.name=Topaz
